--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "axios": "^0.18.0",
     "expo": "^28.0.0",
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-dialog-input": "^1.0.4",
+    "react-native-elements": "^0.19.1",
+    "react-native-modal": "^6.5.0",
     "react-navigation": "2.3.1"
   },
   "devDependencies": {
